Update figures and references in presentations
Changed figure paths in several presentation .tex files to reflect new directory structure and improve organization. Updated bibliography resource paths to use parent directory references. Made content and formatting improvements in 251015_tea.tex, including author updates, title correction, and expanded slides. Deleted obsolete and duplicate files (251015_tea_v2.tex and related auxiliary files). Renamed and reorganized model files for clarity.

--- a/Ppt/250418_5minpresentation.tex
+++ b/Ppt/250418_5minpresentation.tex
@@ -141,7 +141,7 @@
 \begin{frame}{High rate heterogeneity}
 \begin{figure}
     \centering
-    \includegraphics[width=0.5\linewidth]{../figures/image2.png}
+    \includegraphics[width=0.5\linewidth]{../figures/docs_screenshots/image2.png}
     %\caption{Enter Caption}
     \label{fig:enter-label}
 \end{figure}
