--- a/Proposals/250808_update.tex
+++ b/Proposals/250808_update.tex
@@ -7,6 +7,8 @@
 \usepackage{graphicx}
 \usepackage{comment}
 %\usepackage[sort,comma]{natbib}
+\usepackage[utf8]{inputenc}
+\usepackage{setspace}
 \usepackage[backend=biber, style = apa]{biblatex}
 \usepackage{placeins} % to separate sections
 
@@ -18,8 +20,7 @@
 \usepackage{pifont}
 \usepackage{amssymb}
 \usepackage{comment}
-\usepackage[utf8]{inputenc}
-\usepackage{setspace}
+
 \usepackage[hang, flushmargin, bottom]{footmisc}
 \usepackage{footnotebackref}
 \usepackage{xcolor}
@@ -66,7 +67,7 @@
 
 
 
-\addbibresource{references.bib}
+\addbibresource{../references.bib}
 \begin{document}
  
 % \title{{\Large Centralized annuities marketplace}}
@@ -109,7 +110,7 @@ The number of retirees using SCOMP has increased through time, reaching over 50,
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.85\linewidth]{figures/annuity_offer.png}
+    \includegraphics[width=0.85\linewidth]{../figures/docs_screenshots/annuity_offer.png}
     \caption{Annuity offer (source \textcite{illanes_retirement_2019}}
     \label{fig:offer_ann1}
 \end{figure}
