--- a/Proposals/industry_proposal.tex
+++ b/Proposals/industry_proposal.tex
@@ -72,7 +72,8 @@
     
 
 
-\addbibresource{references.bib}
+\addbibresource{../references.bib}
+
 \begin{document}
 
 This document analyzes the current annuity pricing approach and highlights two changes that can increase profitability:
