--- a/models/model4_selectionlogit_long.tex
+++ b/models/model4_selectionlogit_long.tex
@@ -8,6 +8,10 @@
 \usepackage{graphicx}
 \usepackage{comment}
 %\usepackage[sort,comma]{natbib}
+\usepackage[utf8]{inputenc}
+\usepackage{setspace}
+
+
 \usepackage[backend=biber, style = apa]{biblatex}
 \usepackage{placeins} % to separate sections
 
@@ -19,8 +23,6 @@
 \usepackage{pifont}
 \usepackage{amssymb}
 \usepackage{comment}
-\usepackage[utf8]{inputenc}
-\usepackage{setspace}
 \usepackage[hang, flushmargin, bottom]{footmisc}
 \usepackage{footnotebackref}
 \usepackage{xcolor}
@@ -81,7 +83,6 @@
 \end{itemize}
 
 
-\hline
 
 \medskip
 
@@ -269,7 +270,8 @@ The right panel in figure \ref{fig:sigma}   shows three patterns. (i) Average co
  \label{fig:sigma}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=.7]{figures/simulations/sigma_panels_2firms.png} 
+%\includegraphics[scale=.7]{figures/simulations/sigma_panels_2firms.png} 
+\includegraphics[scale=.7]{../figures/simulations/model4/model4_sigma_panels_2firms.png} 
 \end{tabular}
 \end{figure}
 
@@ -282,7 +284,7 @@ The upper left panel of figure \ref{fig:sigma} shows the market shares as functi
  \label{fig:sigma}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=.7]{figures/simulations/rho_panels_2firms.png} 
+\includegraphics[scale=.7]{../figures/simulations/model4/model4_rho_panels_2firms.png} 
 \end{tabular}
 \end{figure}
 
@@ -672,7 +674,7 @@ Plots for other parameters are:
  \label{fig:sigma}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=.7]{figures/simulations/sigma_panels_3firms.png} 
+\includegraphics[scale=.7]{../figures/simulations/model4/model4_sigma_panels_3firms.png} 
 \end{tabular}
 \end{figure}
 
@@ -684,7 +686,7 @@ Plots for other parameters are:
  \label{fig:sigma}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=.7]{figures/simulations/rho_panels_3firms.png} 
+\includegraphics[scale=.7]{../figures/simulations/model4/model4_rho_panels_3firms.png} 
 \end{tabular}
 \end{figure}
  
@@ -693,7 +695,7 @@ Plots for other parameters are:
  \label{fig:sigma}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=.7]{figures/simulations/sigma_panels_4firms.png} 
+\includegraphics[scale=.7]{../figures/simulations/model4/model4_sigma_panels_4firms.png} 
 \end{tabular}
 \end{figure}
 
@@ -705,7 +707,7 @@ Plots for other parameters are:
  \label{fig:sigma}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=.7]{figures/simulations/rho_panels_4firms.png} 
+\includegraphics[scale=.7]{../figures/simulations/model4/model4_rho_panels_4firms.png} 
 \end{tabular}
 \end{figure}
  
