--- a/Ppt/250728_breakfast_v2.tex
+++ b/Ppt/250728_breakfast_v2.tex
@@ -60,7 +60,7 @@
   style=apa,
   citestyle=authoryear
 ]{biblatex}
-\addbibresource{references.bib}
+\addbibresource{../references.bib}
 
 \title{Aftermarkets: Evidence from a Centralized Annuities System}
 %\subtitle{A Mini Literature Overview}
@@ -150,9 +150,9 @@ In \textbf{benchmarks} mention:
 \frametitle{Different use of the aftermarket}\label{slide:single_fig}
 \begin{figure}
     \centering
-    \includegraphics[width=0.49\textwidth]{../figures/IE3_dist_external_offers.png}
+    \includegraphics[width=0.49\textwidth]{../figures/IE3/IE3_dist_external_offers.png}
     \hfill 
-    \includegraphics[width=0.49\textwidth]{../figures/IE3_offer_improvement_histogram.png}
+    \includegraphics[width=0.49\textwidth]{../figures/IE3/IE3_offer_improvement_histogram.png}
 \end{figure}
 
 \begin{itemize}
@@ -260,7 +260,7 @@ Firm specialization in groups
 %\caption{}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{../figures/IE3_supply_income_quintile.png}
+\includegraphics[scale=0.27]{../figures/IE3/IE3_supply_income_quintile.png}
 \end{tabular}
 \end{figure}
 
@@ -276,7 +276,7 @@ Firm specialization in groups
 \caption{}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.24]{../figures/IE3_supply_offerprob_income_q(2).png}
+\includegraphics[scale=0.24]{../figures/IE3/IE3_supply_offerprob_income_q(2).png}
 \end{tabular}
 \end{figure}
 
@@ -295,7 +295,7 @@ Buyers do not always buy highest annuity. Average foregone value is 1.57 monthly
 %\caption{}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.25]{../figures/IE3_foregone_hist.png}
+\includegraphics[scale=0.25]{../figures/IE3/IE3_foregone_hist.png}
 \end{tabular}
 \end{figure}
 \hyperlink{slide:answer1}{\beamerbutton{Go back}}
@@ -310,7 +310,7 @@ Buyers do not always buy highest annuity. Average foregone value is 1.57 monthly
 %\caption{}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.27]{../figures/IE3_search_by_income_quintile.png}
+\includegraphics[scale=0.27]{../figures/IE3/IE3_search_by_income_quintile.png}
 \end{tabular}
 \end{figure}
 \hyperlink{slide:single_fig}{\beamerbutton{Go back}}
