--- a/Ppt/251015_tea.tex
+++ b/Ppt/251015_tea.tex
@@ -5,14 +5,14 @@
 
 
 % Add this line to your preamble
-\setbeameroption{show notes on second screen=right}
+%\setbeameroption{show notes on second screen=right}
 
 %\usetheme{Singapore} %Boadilla, Madrid, default, etc. 
 \usetheme[progressbar=frametitle]{metropolis}
 \usecolortheme{rose} %beaver, dolphin, crane, 
 
 
-%\setbeamersize{text margin left=4mm, text margin right=4mm}
+\setbeamersize{text margin left=4mm, text margin right=4mm}
 
 
 \usecolortheme{default}
@@ -23,6 +23,7 @@
 \usepackage{xcolor}
 \usepackage{tikz}
 \usepackage{booktabs} % Required for \toprule, \midrule, \bottomrule
+\usepackage{amsmath,amssymb,dsfont} % for \text, \mathbb, \mathds{1}
 \usetikzlibrary{shapes.geometric, arrows, positioning}
 
 \tikzstyle{block} = [rectangle, draw, text width=4cm, align=center, rounded corners, minimum height=1cm]
@@ -68,17 +69,18 @@
 ]{biblatex}
 \addbibresource{../references.bib}
 
-\title{Equiilibrium effects of price updating: evidence from a centralized marketplace for annuities}
+\title{Equilibrium effects of price updating: evidence from a centralized marketplace for annuities}
 %\subtitle{A Mini Literature Overview}
 
 \author{%
  Lucas Condeza
 \inst{1} \and
-   %\and
-%  Coauthor Three\inst{3}
+Diego Cussen
+\inst{2}
 }
 \institute{
   \inst{1} Yale University \\
+  \inst{2} New York University
 }
 
 \date{\today}
@@ -93,28 +95,40 @@
 
  %%%%%%%%% Slide 2  %%%%%%%%%%%%%
 
-\begin{frame}{Motivation} 
+\begin{frame}{Motivation}\label{slide:motivation}
 \begin{itemize}
     \item  In several markets consumers receive initial offers, then they can request revised offers. Examples: 
     \begin{itemize}
-        \item Loans: consumers get a loan estimate (LE) and showing a LE to another lender could lead to a revised offer. [\href{https://chatgpt.com/share/68eaf593-1518-800d-b874-1fba1adbe177}{1}]
-        \item Auto dealerships: buyers can shop around and dealers are willing to revise their initial offers [\href{https://chatgpt.com/share/68eaf593-1518-800d-b874-1fba1adbe177}{2}]
+        \item Loans: consumers get a loan estimate (LE) and showing a LE to another lender could lead to a revised offer. \hyperlink{slide:fig_LE}{\beamerbutton{Loan Estimate}} %[\href{https://chatgpt.com/share/68eaf593-1518-800d-b874-1fba1adbe177}{1}]
+        \item Auto dealerships: buyers can shop around and dealers are willing to revise their initial offers %[\href{https://chatgpt.com/share/68eaf593-1518-800d-b874-1fba1adbe177}{2}]
     \end{itemize}
 
-    \item What are the impacts of allowing consumers to request revised offers?
-    \item Economic forces at play: 
+    \item What is  the welfare impact of allowing consumers to request revised offers?
+    \item Effects of prohibiting revised offers: 
+    
     \begin{itemize}
-        \item Learning: firms learn competitors' prices and can best respond.
-        \item Discrimination: if search cost are correlated with preferences. [not today] 
+        \item Direct impact: buyer can no longer improve initial offer. 
+        \item Indirect effect: buyers improve their initial offers 
     \end{itemize}
+
+    %Economic forces at play: 
+    %\begin{itemize}
+    %    \item Learning: firms learn competitors' prices and can best respond.
+    %  \item Discrimination: if search cost are correlated with preferences. [not today] 
+    %\end{itemize}
+    \note{Mention that only firms who made an initial offer can revise their offers. }
+    
 \end{itemize}
+
 \note{
     \begin{itemize}
         \item I am going to study the effects of being able to request revised offers in a centralized marketplace for annuities in Chile.  
     \end{itemize}}
+
+
 \end{frame}
 
-%%%%%%%%%
+%%%%%%%%% Slide 3 %%%%%%%%%%%%%
 
 \begin{frame}{This research}
 \begin{itemize}
@@ -125,112 +139,145 @@
         \item After: consumers can only accept/reject initial offers.
         \item Rationale for elimination: "firms will not make their best efforts in the initial phase"
     \end{itemize}
-    \item Also provides evidence on assymmetries in infomration precision in selection markets. 
+    %\item Also provides evidence on asymmetries in information precision in selection markets. 
 \end{itemize}
 \end{frame}
 
- %%%%%%%%%
-
+ %%%%%%%%% Slide 4 %%%%%%%%%%%%%
 \begin{frame}{Literature}
 \begin{itemize}
-    \item Aftermarkets: \textcite{allen_search_2019} %larsen_efficiency_2021
+    \item Search in selection markets: \textcite{allen_search_2019} %larsen_efficiency_2021
 
-    \item Competition in selection markets: \textcite{mahoney_imperfect_2017, cuesta_price_2018, cosconati_competing_2025}
+    \item Competition in selection markets: \textcite{mahoney_imperfect_2017, crawford_asymmetric_2018,
+    cuesta_price_2018, cosconati_competing_2025} 
 
-    \item Selection in multiple dimensions: \textcite{finkelstein_adverse_2004} and Finkelstein and McGarry (2006).  
+    \item Centralized marketplaces in selection markets : \textcite{abaluck_when_2023,tebaldi_estimating_2025} 
+    
+    \item SCOMP specific: \textcite{boehm_intermediation_2024, illanes_retirement_2019, alcalde_intermediary_2021}
+    
+    %\item Selection in multiple dimensions: \textcite{finkelstein_adverse_2004} and Finkelstein and McGarry (2006).  
+
+    %\item Aftermarkets: \textcite{allen_search_2019} %larsen_efficiency_2021   
 \end{itemize}
-
+\note{
+\textcolor{blue}{ ADD THE CONTRIBUTIONS TO EACH LITERATURE AND ADD MORE PAPERS}
+}
 \end{frame}
 
 %%%%%%%%%
 
 \section{Setting and Data}
 
+%%%%%%%%% Slide 6 %%%%%%%%%%%%%
 \begin{frame}{Setting: annuities}\label{slide:setting}
     
-    
     \begin{itemize}%[<+->]
+    \item Annuities: transform a stock of savings into a stream of payments until death.
+    \item Reasons to buy: insure against overlife risk
         \item Profits of firm $j$: 
     \begin{align*}
     \pi_{ji}(F) = S_i-  \mathbb{E}^j_{T} \left[\sum_{t=1}^T\frac{F}{(1+r_j)^t}|x_i \right]
     \end{align*}
     % if it was only financing cost, it would be a monopoly
    
-     $S$: stock of savings, $F$: per period annuity payment, $x_i$: individual mortality factors
+     $S$: stock of savings, $F$: per period annuity payment, $x_i$: buyer mortality factors
     
-    \item Firm heterogeneity: algorithm (mortality tables), financing costs ($r_j$) and risk ratings. 
+    %\item Firm heterogeneity: algorithm (mortality tables), financing costs ($r_j$) and risk ratings. 
+    \item Firm heterogeneity: algorithm (mortality tables) and financing costs ($r_j$)
+    
     \end{itemize}
+
 
     \note{
     \begin{itemize}
         \item Explicitly not link the annuities market with pensions because generates confusion
         \item Explain what annuities are. 
+        \item Mention that $x_i$ is not firm specific. Firms observe the same covariates.
+        \item Explain that the risk rating is a measure of the bankruptcy risk of the firm, I am assuming that only affects demand.
     \end{itemize}}
 \end{frame}
 
-
-\begin{frame}{SCOMP Process Flow Diagram}\label{slide:setting2}
+%%%%%%%%% Slide 7 %%%%%%%%%%%%%
+\begin{frame}{SCOMP Process}\label{slide:setting2}
 \begin{center}
-\input{../figures/tikz/SCOMP_diagram.tex}
+\input{../figures/tikz/SCOMP_diagram_v3.tex}
 \end{center}
 \begin{itemize}
     \item \hyperlink{slide:fig_offer_certificate}{\beamerbutton{Offer Certificate}}
 \end{itemize}
+\note{
+Explain that: 
+\begin{itemize}
+    \item Mention that revise  offers are less regulated
+    \item An exception to less regulation is that they can not be lower than initial offers. 
+    \item only initial bidders can make revised offers 
+    \item We do not observe requests only the revised offers. 
+    \item When requesting revised offers, firms learn competitors' initial offers.
+\end{itemize}
+}
 \end{frame}
 
-%%%%%%%%%
-
+%%%%%%%%% Slide 8 
 \begin{frame}{Data} \label{slide:data}
 \begin{itemize}
     \item SCOMP data at the individual level  
     \begin{itemize}
-        \item Posted and revised prices, and consumer decisions 
+        \item Posted and revised offers, consumer acceptance. \textbf{Not} requests 
         \item Total savings 
-        \item Demographics: age and gender \hyperlink{slide:fig_offer_certificate}{\beamerbutton{Certificate with initial prices}}
+        \item Demographics: age and gender \hyperlink{slide:fig_offer_certificate}{\beamerbutton{Certificate with initial offers}}
     \end{itemize}
      \item Retirement insurance companies: risk ratings
 \end{itemize}
 
 Particularities of the data/setting: 
-
 \begin{itemize}
     \item One observes all the offers received by the buyers 
     \item One observes the same information as the firms (gender, age, savings)
 \end{itemize}
+\textcolor{red}{[best way of leveraging this particularities?]}
+\note{
+    \begin{itemize}
+        \item I observe only the revised offers made not the requested ones. 
+
+    \end{itemize}
+}
 \end{frame}
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Empirical Evidence}
  
-
+%10 - Descriptive evidence 
 \begin{frame}{Descriptive Evidence}\label{slide:Descriptive_evidence}
-\begin{itemize}
-    \item Most buyers request external offers and the improvement is sizeable. \hyperlink{slide:fig1}{\beamerbutton{External offers}} 
-    \item Products are differentiated \hyperlink{slide:fig2}{\beamerbutton{Foregone value}} 
-    \item Selection into companies \hyperlink{slide:fig3}{\beamerbutton{Heterogeneity in algorithm precision}}
-    \item Firms learn about other firms' prices  \hyperlink{slide:fig4}{\beamerbutton{Learning}} 
-\end{itemize}
+
+\begin{enumerate}
+    \item Not all buyers request revised offers  $\rightarrow$ search costs \hyperlink{slide:fig1}{\beamerbutton{Revised offers}}
+    %\item Most buyers request revised offers and the improvement is substantial $\rightarrow$ search costs \hyperlink{slide:fig1}{\beamerbutton{Revised offers}} 
+    \item Buyers choose lower offers $\rightarrow$ product differentiation  \hyperlink{slide:fig2}{\beamerbutton{Foregone value}} 
+    \item Sorting into firms $\rightarrow$ algorithm precision?  \hyperlink{slide:fig3}{\beamerbutton{Sorting into firms}}
+    \item Patterns in revised offers $\rightarrow$ firm learning of initial offers.   \hyperlink{slide:fig4}{\beamerbutton{Learning}} 
+\end{enumerate}
 \end{frame}
 
-
-%%%%
-
-\begin{frame}\frametitle{Prevalence of external offers}\label{slide:fig1}
+%11 - Prevalence of revisions 
+\begin{frame}\frametitle{Revised offers: quantity and size}\label{slide:fig1}
 \begin{figure}
     \centering
-    \includegraphics[width=0.49\textwidth]{../figures/IE3_dist_external_offers.png}
+    \includegraphics[width=0.49\textwidth]{../figures/IE3/IE3_dist_external_offers(1).png}
     \hfill 
-    \includegraphics[width=0.49\textwidth]{../figures/IE3_offer_improvement_histogram.png}
+    \includegraphics[width=0.49\textwidth]{../figures/IE3/IE3_offer_improvement_histogram.png}
 \end{figure}
 
 \begin{itemize}
-    \item   75\% of the purchases are through external offers. 
+    \item   75\% of the purchases are through revised offers. 
      \hyperlink{slide:Descriptive_evidence}{\beamerbutton{Go back}}   
+    \item Not everyone requests revised offers $\rightarrow$ search costs. 
 \end{itemize}
 
 \note{
-That only some people use the aftermarket suggest: 
+That only some people request revised offers suggests: 
 \begin{itemize}
     \item There are search costs 
     \item Firms could be discriminating based on the search likelihood. 
@@ -241,82 +288,142 @@ In a model where search costs are not correlated with valuations, the aftermarke
 }
 \end{frame}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+%%%%%%%%% Slide 12 %%%%%%%%%%%%%
 \begin{frame}{Differentiation}\label{slide:fig2}    
 Buyers do not always buy highest annuity. Average foregone value is 1.57 monthly wages.
 \begin{figure}[H]
 %\caption{}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.25]{../figures/IE3_foregone_hist.png}
+\includegraphics[scale=0.25]{../figures/IE3/IE3_foregone_hist.png}
 \end{tabular}
 \end{figure}
 \hyperlink{slide:Descriptive_evidence}{\beamerbutton{Go back}}
 \end{frame}
+
+
+\begin{frame}{Sorting into firms}
+    \begin{itemize}
+        \item Risk Sorting: firm differ in terms of the distribution of the buyer's risk
+
+        \item Possible cause 
+        \begin{itemize}
+            \item Differences in screening technology: firms. Type $\theta$ and firms observe $\theta_j\sim N(\theta, \sigma_j)$ 
+            \item Correlation between buyer's risk and preferences. 
+            \item Others... 
+        \end{itemize}
+    \end{itemize}
+\end{frame}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
-\begin{frame}{Heterogeneity in algorithm precision}\label{slide:fig3}    
+\begin{frame}{Sorting into firms (2)}\label{slide:fig3}    
+\vspace{-.2cm}
 \begin{figure}[H]
-%\caption{}
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.264]{../figures/IE6/IE6_survival_year_all.png}
+\includegraphics[scale=0.2964]{../figures/IE6/IE6_survival_year_all.png}
 \end{tabular}
 \end{figure}
 \hyperlink{slide:Descriptive_evidence}{\beamerbutton{Go back}}
 \end{frame}
 
+%%%%%%%%% Slide 15 
 
 \begin{frame}{Learning}\label{slide:fig4}    
-\scalebox{0.8}{
-    \input{../Tables/IE7/IE7_learning_regressions.tex}
+\begin{columns}[T] % [T] aligns columns at the top
+\begin{column}{0.48\textwidth}
+     \begin{itemize}
+        \item     If firms do not know competitors' prices one expects them to increase their offers more when the competitors' prices are higher. 
+    $$ F_{ij}^R - F_{ij}^I = \beta_0 + \beta_1 \text{Avg. gap}_{ij} + \beta_2 \text{Max. gap}_{ij} + \beta_j + \epsilon_{ij}$$
+    where  \\
+    $ \text{Avg. gap }_{ij} = \frac{1}{F_{ij}^I}\left(\frac{1}{J-1}\sum_{k \neq j} F_{ik}^I - F_{ij}^I\right) $\\ 
+    $ \text{Max. gap } = \frac{1}{F_{ij}^I}\left(\max_{k \neq j} F_{ik}^I - F_{ij}^I\right)$
+    \item How to deal with selection (observe revisions not requests)? 
+\end{itemize}
+\end{column}
+\hfill
+\begin{column}{0.48\textwidth}
+ \scalebox{.9}{
+    \input{../Tables/IE7/IE7_learning_regressions(presentation).tex}
 }
-\hyperlink{slide:Descriptive_evidence}{\beamerbutton{Go back}}
+\end{column}
+\end{columns}
 \end{frame}
 
 
-\begin{frame}{Learning(1)}\label{slide:fig5}
-  \begin{figure}[H]
-%\caption{}
+
+
+%%%%%%%%% Slide 16
+\begin{frame}{Learning}\label{slide:fig5}    
+\begin{columns}[T] % [T] aligns columns at the top
+\begin{column}{0.35\textwidth}
+     \begin{itemize}
+        \item Firms might want to just outbid their competitors.
+    \end{itemize}
+    $$ \underbrace{\frac{ F_{ij}^R - F_{ij}^I}{F_{ij}^I}}_{\text{Improvement}} - \underbrace{\frac{ max_{k \neq j} F_{ik}^I - F_{ij}^I}{F_{ij}^I}}_{\text{"Necessary" improvement}}$$ 
+    $$    =\frac{ F_{ij}^R -max_{k \neq j} F_{ik}^I}{F_{ij}^I }  $$
+\end{column}
+\hfill
+\begin{column}{0.69\textwidth}
+ \begin{figure}[H]
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.39]{../figures/IE7/IE7_hist_bunching_max(2).png} 
+\includegraphics[scale=0.26]{../figures/IE7/IE7_hist_bunching_max(2).png} 
 \end{tabular}
 \end{figure}
-\hyperlink{slide:Descriptive_evidence}{\beamerbutton{Go back}}
+\end{column}
+\end{columns}
 \end{frame}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{Model}
+\section{Model and Simulations}
 
+%%%%%%%%% Slide 19 %%%%%%%%%%%%% 
 
 \begin{frame}{Learning Model: Overview}
 \begin{itemize}
-    \item \textbf{Goal:} Rationalize the increase in offers between initial and external offers
+    \item \textbf{Goal:} Rationalize the increase in offers between initial and revised offers
     
-    \item \textbf{Key mechanism:} Firms learn competitors' offers when consumer requests external offers
-    
-    \item \textbf{Setup:}
+    \item \textbf{Key mechanism:} Firms learn competitors' offers when consumer requests revised offers
+
+    \item \textbf{Incorporate:}
     \begin{itemize}
-        \item One consumer and $J$ firms
-        \item Firm $j$ has private cost $c_j \sim F_j$ (due to interest rate variation)
-        \item Consumer chooses firm with probability $D_j(p)$ (logit demand)
+        \item Search cost [not today]
+        \item Product Differentiation [today]
+        \item Sorting into firms [not today]
+        \item Learning [today]
     \end{itemize}
-    
-    \item \textbf{Innovation:} Two-stage pricing with learning opportunity
 \end{itemize}
 \end{frame}
 
 %%%%%
 
-\begin{frame}{Two-Stage Game: Timeline}
+\begin{frame}{Two-Stage Game: Timeline}\label{slide:timeline}
 \begin{enumerate}
-    \item \textbf{Stage 1 (Initial offers):}
+    \item \textbf{Stage 1 (Initial offers):} \hyperlink{slide:connection}{\beamerbutton{Connection with setting}}
+
     \begin{itemize}
+        \item Firms draw costs $c_j$ from distribution $F(c_j|c_{-j})$ they only observe their own cost.
         \item Firms simultaneously post initial prices $p^{T1}_j$
         \item Consumer observes all offers
     \end{itemize}
@@ -326,12 +433,12 @@ Buyers do not always buy highest annuity. Average foregone value is 1.57 monthly
     \item \textbf{Consumer decision:}
     \begin{itemize}
         \item With probability $1-\lambda$: accepts one of the initial offers
-        \item With probability $\lambda$: requests external offer from random firm
+        \item With probability $\lambda$: requests a revised offer from a randomly chosen firms
     \end{itemize}
     
     \vspace{0.3cm}
     
-    \item \textbf{Stage 2 (External offers):}
+    \item \textbf{Stage 2 (Revised offers):}
     \begin{itemize}
         \item Selected firm observes all initial offers $p^{T1}$
         \item Can update its offer: $p^{T2}_j(c_j, p^{T1}) = \min(p^{T1}_j, p^*)$
@@ -342,39 +449,35 @@ Buyers do not always buy highest annuity. Average foregone value is 1.57 monthly
 
 %%%%%
 
-\begin{frame}{Second Stage: Optimal Pricing with Learning}
-\textbf{When selected for external offer, firm observes competitors' initial prices}
+\begin{frame}{Second Stage: optimal pricing}
+
+\begin{itemize}
+    \item When selected for revised offer, firm observes competitors' initial prices
+    \item After observing competitors, firm best-responds to known prices rather than expected prices
+\end{itemize}
 
 \vspace{0.3cm}
 
 \textbf{Optimal updated offer:}
-$$p^{T2}_j(c_j, p^{T1}) = \min(p^{T1}_j, p^*)$$
+$$p^{T2}_j(c_j, p^{T1}) = \min(p^{T1}_j, p^*(c_j, p^{T1}_{-j}))$$
 
 where
-$$p^* = \arg\max_{p_j} (p_j - c_j) D_j(p_j, p^{T1}_{-j})$$
-
-\vspace{0.5cm}
-
-\textbf{Key insight:} Firm can only lower its price (or keep it unchanged)
-
-\vspace{0.3cm}
-After observing competitors, firm best-responds to known prices rather than expected prices
+$$p^*(c_j, p^{T1}_{-j}) = \arg\max_{p_j} (p_j - c_j) D_j(p_j, p^{T1}_{-j})$$
 \end{frame}
 
 %%%%%
 
-\begin{frame}{Expected Profits in Second Stage}
-\textbf{When consumer searches, firm $j$ faces two scenarios:}
+\begin{frame}{Second stage: profits}
+\begin{itemize}
+    \item When consumer searches, firm $j$ faces two scenarios:
+\end{itemize}
+\begin{enumerate}
+    \item Selected for revised offer ($\frac{1}{J}$ probability):
+    $$\pi^{(j)}_j(p^{T1}, c_j) = (p^{T2}_j(c_j, p^{T1}) - c_j) D_j(p^{T2}_j(c_j, p^{T1}), p^{T1}_{-j})$$
+    \item Competitor $j'$ selected ($\frac{1}{J}$ probability):
+    $$\pi^{(j')}_j(p^{T1}, c_j, c_{j'}) = (p^{T1}_j - c_j) D_j(p^{T1}_{-j'}, p^{T2}_{j'}(c_{j'}, p^{T1}))$$
+\end{enumerate}
 
-\vspace{0.3cm}
-
-\textbf{1. Selected for external offer ($\frac{1}{J}$ probability):}
-$$\pi^{(j)}_j(p^{T1}, c_j) = (p^{T2}_j(c_j, p^{T1}) - c_j) D_j(p^{T2}_j(c_j, p^{T1}), p^{T1}_{-j})$$
-
-\vspace{0.3cm}
-
-\textbf{2. Competitor $j'$ selected ($\frac{1}{J}$ probability):}
-$$\pi^{(j')}_j(p^{T1}, c_j, c_{j'}) = (p^{T1}_j - c_j) D_j(p^{T1}_{-j'}, p^{T2}_{j'}(c_{j'}, p^{T1}))$$
 
 \vspace{0.5cm}
 
@@ -384,32 +487,75 @@ $$\pi^{T2}_j(p^{T1}, c_j, c_{-j}) = \frac{1}{J}\left[\pi^{(j)}_j(p^{T1}, c_j) + 
 
 %%%%%
 
+ 
 \begin{frame}{First Stage: Strategic Pricing}
-\textbf{Firms anticipate the second stage when setting initial prices}
+\begin{itemize}
+    \item Firms anticipate the second stage when setting initial prices
+    \item Expected profits in the first stage:
+    $$\pi^{T1}_j(p^{T1}, c_j, c_{-j}) = (1-\lambda)\underbrace{(p^{T1}_j - c_j)D_j(p^{T1})}_{\text{Immediate acceptance}} + \lambda \underbrace{\pi^{T2}_j(p^{T1}, c_j, c_{-j})}_{\text{Search occurs}}$$
+    \item Equilibrium condition:
+    $$p^{T1}_j(c_j) = \arg\max_{p_j} \int \pi^{T1}_j(p_j, p^{T1}_{-j}(c_{-j}), c_j) dF(c_{-j}|c_j)$$
+\end{itemize}
 
-\vspace{0.5cm}
+\textcolor{red}{[How to compute equilibrium?]}
+\end{frame}
 
-\textbf{Expected profits in first stage:}
-$$\pi^{T1}_j(p^{T1}, c_j, c_{-j}) = (1-\lambda)\underbrace{(p^{T1}_j - c_j)D_j(p^{T1})}_{\text{Immediate acceptance}} + \lambda \underbrace{\pi^{T2}_j(p^{T1}, c_j, c_{-j})}_{\text{Search occurs}}$$
+\begin{frame}{Strategic considerations}
+Define $g(p_j, p_{-j}) =  D_j + (p_j - c_j) \frac{\partial D_j}{\partial p_j}$
 
-\vspace{0.5cm}
-
-\textbf{Equilibrium condition:}
-$$p^{T1}_j(c_j) = \arg\max_{p_j} \int \pi^{T1}_j(p_j, p^{T1}_{-j}(c_{-j}), c_j) dF(c_{-j}|c_j)$$
-
-\vspace{0.3cm}
-Trade-off: higher initial price (if accepted) vs. competitive position if search occurs
+\begin{align*}
+\frac{\partial \pi_j^{T1}(p^{T1}, c_j, c_{-j})}{\partial p_j^{T1}}
+&= (1-\lambda) g(p_j^{T1}, p_{-j}^{T1})
++ \frac{\lambda}{J}\bigg(
+\underbrace{\frac{\partial p_j^{T2}}{\partial p_j^{T1}} g(p_j^{T2}, p_{-j}^{T1})}_{\text{Option value}}
+\\ &
++ \sum_{j' \ne j} \Big[
+D_j(p_{-j'}^{T1}, p_{j'}^{T2}) + (p_j^{T1} - c_j)
+\bigg( \frac{\partial D_j(p_{-j'}^{T1}, p_{j'}^{T2})}{\partial p_j^{T1}}
++ \underbrace{\frac{\partial D_j(p_{-j'}^{T1}, p_{j'}^{T2})}{\partial p_{j'}^{T2}}
+\frac{\partial p_{j'}^{T2}}{\partial p_j^{T1}}}_{\text{Strategic complementarity}}
+\bigg) \Big]
+\bigg)
+\end{align*}
 \end{frame}
 
 
-\begin{frame}{Simulations }
+\begin{frame}{Simulations: equilibrium strategies}
 \begin{figure}[H]
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.7]{../figures/simulations/model5/pricesCI_IC.png}
+\includegraphics[scale=0.5]{../figures/simulations/model5/pricesCI_IC.png}
 \end{tabular}
 \end{figure}
+\begin{itemize}
+    \item Parameters: $J= 4, \alpha = 1, \delta = 2, c_j \sim N(2, 0.5^2)$  
+\end{itemize}
 \end{frame}
+
+\begin{frame}{Extensions}
+Possible extensions
+\begin{itemize}
+    \item To add search costs
+    \item Allow for more than one search 
+    \item Model prediction precision 
+\end{itemize}
+\end{frame}
+
+
+\section{Appendix}
+
+
+\begin{frame}{Loan estimate}\label{slide:fig_LE}    
+\begin{figure}[H]
+\centering{}%
+\begin{tabular}{cc}
+\includegraphics[scale=0.42]{../figures/docs_screenshots/Loan Estimate_cut.png}
+\end{tabular}
+\end{figure}
+\hyperlink{slide:motivation}{\beamerbutton{Go back: Motivation}}
+\end{frame}
+
+
 
 
 
@@ -417,7 +563,7 @@ Trade-off: higher initial price (if accepted) vs. competitive position if search
 \begin{figure}[H]
 \centering{}%
 \begin{tabular}{cc}
-\includegraphics[scale=0.49]{../figures/annuity_offer.png}
+\includegraphics[scale=0.49]{../figures/docs_screenshots/annuity_offer.png}
 \end{tabular}
 \end{figure}
 \hyperlink{slide:setting2}{\beamerbutton{Go back: Diagram}} 
@@ -425,5 +571,22 @@ Trade-off: higher initial price (if accepted) vs. competitive position if search
 \end{frame}
 
 
+\begin{frame}{Connection model with setting}\label{slide:connection}    
+\begin{itemize}
+    \item Firms cost: 
+    \begin{align*}
+        c_{ij} =  \mathbb{E}^j_{T} \left[\sum_{t=1}^T\frac{1}{(1+r_j)^t}|x_i \right]
+    \end{align*}  
+    \item Firm prices: $p_j = S_i/F_{ij}$
+    \item Demand: $ D_{ij}(F_{ij}) = F_{ij}\mathds{1}(\text{i chooses j})  $
+    \item Firm profits: 
+    \begin{align*}
+        \pi_{ij}(F) = (p_j - c_{ij}) D_{ij}(F_{ij})  %= \left(\frac{S}{F_{ij}}-   \mathbb{E}^j_{T} \left[\sum_{t=1}^T\frac{1}{(1+r_j)^t}|x_i \right]\right) F_{ij}\mathds{1}(\text{i chooses j}) 
+        = \left(S_i- \mathbb{E}^j_{T} \left[\sum_{t=1}^T\frac{F_{ij}}{(1+r_j)^t}|x_i \right]\right)\mathds{1}(\text{i chooses j}) 
+    \end{align*}
+\end{itemize}
 
+\hyperlink{slide:timeline}{\beamerbutton{Go back: Timeline}}
+
+\end{frame}
 \end{document}
