--- a/Proposals/250614_meeting_jason.tex
+++ b/Proposals/250614_meeting_jason.tex
@@ -66,7 +66,7 @@
 
 
 
-\addbibresource{references.bib}
+\addbibresource{../references.bib}
 \begin{document}
  
 % \title{{\Large Centralized annuities marketplace}}
@@ -109,7 +109,7 @@ The number of retirees using SCOMP has increased through time, reaching over 50,
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.85\linewidth]{figures/annuity_offer.png}
+    \includegraphics[width=0.85\linewidth]{../figures/docs_screenshots/annuity_offer.png}
     \caption{Annuity offer (source \textcite{illanes_retirement_2019}}
     \label{fig:offer_ann1}
 \end{figure}
