--- a/models/model5_learning.tex
+++ b/models/model5_learning.tex
@@ -7,6 +7,9 @@
 \usepackage{ulem} 
 \usepackage{graphicx}
 \usepackage{comment}
+\usepackage[utf8]{inputenc}
+\usepackage{setspace}
+
 %\usepackage[sort,comma]{natbib}
 \usepackage[backend=biber, style = apa]{biblatex}
 \usepackage{placeins} % to separate sections
@@ -19,8 +22,6 @@
 \usepackage{pifont}
 \usepackage{amssymb}
 \usepackage{comment}
-\usepackage[utf8]{inputenc}
-\usepackage{setspace}
 \usepackage[hang, flushmargin, bottom]{footmisc}
 \usepackage{footnotebackref}
 \usepackage{xcolor}
@@ -50,77 +51,344 @@
 \begin{document}
 
 
+\section{Model}
 
 This model tries to rationalize the increase in the amount offered between the initial offer and the external offers. Broadly the idea is that there will be some learning\footnote{We take a stance on what is generating uncertainty about the other firms' offers. If it is the mortality tables there is a winner's curse, if it is interest rate variation there's no curse. We assume the latter. }. 
 
-We first start by deriving a model without external offers. 
+We first start by deriving a model without external offers, which we call the one stage game. 
 
-\subsection{Base model }
+\subsection{One stage game}
 There is a consumer and $J$ firms. 
 
-Each firm $j$ receives a signal about the cost of consumer $i$, denoted as $\tilde{c}_{j}$.The firms update their beliefs about the cost of consumer $i$ based on this signal.
-This signal is drawn from a distribution with pdf $F_j$ mean $c_i$ and variance $\sigma^2$\footnote{The variance can come due to commissions or interest rates} , after observing the signal the firms makes an offer $p_j$.  Denote by $p = (p_1, ..., p_J)$ the vector of offers received by the buyer.  The consumer faces a discrete choice problem where we denote the probability of him choosing $j$ as $D_j(p)$. 
+Each firm $j$ has a cost $c_j$ to sell to the consumer. But the costs are private knowledge, they are draws from a distribution with cdf $F_j$\footnote{The private knowledge is because interest rates are changed frequently and also there are commissions paid to intermediaries, which are not known by the competitors. 
+} , after observing the signal firms make  offers $p_j$.  Denote by $p = (p_1, ..., p_J)$ the vector of offers received by the buyer.  The consumer faces a discrete choice problem where we denote the probability of him choosing $j$ as $D_j(p)$. 
 
 An equilibrium of the pricing game are functions $p_j(c_i)$ such that for all $j$:
 \begin{align}
-\label{eq:base_equilibrium}
-    p_j(c_i) = \arg \max_{p_j} \int_{\mathbb{R}^{N-1}}^{} (p_j - c_j) D_j(p_j, p_{-j}(c_{-j})) dF(p_{-j} \mid c_j)
+\label{eq:base_equilibrium} %eq 1 
+    p_j(c_j) = \arg \max_{p_j} \int_{\mathbb{R}^{N-1}}^{} (p_j - c_j) D_j(p_j, p_{-j}(c_{-j})) dF(c_{-j} \mid c_j)
 \end{align} 
 
 where $p_{-j}(c_{-j}) = (p_n(c_n))_{n \neq j}$ and $F(p_{-j} \mid c_j)$ is the distribution of the offers of the other firms given firm's $j$ cost. Note that firm profits in this case are: $\pi_j^{O}(p_j, p_{-j}, c_j) = \int (p_j - c_j) D_j(p_j, p_{-j}(c_{-j})) dF(p_{-j} \mid c_j)$
 
 Where the $O$ supraindex denote the game of only one stage. 
 
-\subsection{Model with external offers}
 
-Now suppose that firms are in the same situation as before, but after making their offers with probability $\lambda$ the consumer chooses to request an external offer. In which case he chooses randomly one firm from which to request the external offer, then the firm can observe the initial offers made by the other firms and decide whether to update its offer \footnote{The firms are not always able to observe the prior offers. In this model we are assuming $\lambda$ is exogenous and the firm observes initial offers. One possible extension is to endogeneize the search behavior (searches if certain conditions are met) and also to assume that sometimes the firm does not observe the prior offers. Note that this could considerably complicate the model because the disclosure of the initial offers is strategic and by itself could reveal somethin, but we do not observe whether the buyer discloses. }.
+\subsection{Two stage game:  with external offers}
 
-We will use backward induction to solve the new game. 
+Now suppose that firms are in the same situation as before, but after making their offers with probability $\lambda$ the consumer chooses to request an external offer. In which case he chooses randomly one firm from which to request the external offer, then the firm can observe the initial offers made by the other firms and decide whether to update its offer \footnote{The firms are not always able to observe the prior offers. In this model we are assuming $\lambda$ is exogenous and the firm observes initial offers. One possible extension is to endogeneize the search behavior (searches if certain conditions are met) and also to assume that sometimes the firm does not observe the prior offers. Note that this could considerably complicate the model because the disclosure of the initial offers is strategic and by itself could reveal something, but we do not observe whether the buyer discloses. }.
+
+We will use backward induction to solve the two stage game. 
 
 In the second stage a firm chooses an offer $p_{j}^{T2}$ equal to the minimum between the initial offer and the optimal offer after observing all the initial offers, i.e. 
 \begin{align}
-\label{eq:base_equilibrium2}
-    p_{j}^{T2}(c_j, p) = \min(p_j^{T1}, p^*)
+\label{eq:base_equilibrium2} %eq 2 
+    p_{j}^{T2}(c_j, p^{T1}) = \min(p_j^{T1}, p^*)
 \end{align}
 where the optimal offer is given by: 
+\begin{align} %eq 3
+    p^* = \arg \max_{p_j} (p_j - c_j) D_j(p_j, p_{-j}^{T1}) 
+\end{align}
+
+
+
+Then, the profits of firm $j$ if the buyer requests an external offer from firm $j$ are: 
+
+\begin{align}\label{eq:asking_j} %eq 4
+    \pi_j^{(j)}(p^{T1}, c_j) =   (p_j^{T2}(c_j, p^{T1}) - c_j) D_j(p_j^{T2}(c_j, p^{T1}), p_{-j}^{T1}) 
+\end{align}
+
+And the profits of firm $j$ if the buyer requests an external offer from firm $j'$ are: 
+
+\begin{align}\label{eq:asking_j'} %eq 5
+    \pi_j^{(j')}(p^{T1}, c_j, c_{j'}) = (p_j^{T1} - c_j) D_j(p_{-j'}^{T1}, p_{ j'}^{T2}(c_{j'}, p^{T1})) 
+\end{align}
+
+Then, the expected profits of firm $j$ in the case the consumer requests an external offer are: 
+
+\begin{align}\label{eq:profits_external2} %eq 6
+    \pi_j^{T2}(p^{T1}, c_j, c_{-j}) =  \frac{1}{J} \left( \pi_j^{(j)}(p^{T1}, c_j)   + \sum_{j'\neq j} \pi_j^{(j')}(p^{T1}, c_j, c_{j'}) \right)
+\end{align}
+
+
+note that the costs of the competitors ($c_{-j}$) enter into the profits since they affect the way the competitors update their prices in case they are asked to update their prices.
+
+Then, given strategies  $p_j^{T2}(c_j, p^{T1})$ we can calculate the expected profits given a prices set in the first stage and teh costs: 
+\begin{align}\label{eq:7} % eq 7 
+    \pi_j^{T1}(p^{T1}, c_j, c_{-j}) = (1-\lambda) \pi_j^O(p^{T1}, c_j) + \lambda \pi_j^{T2}(p^{T1}, c_j, c_{-j})
+\end{align}
+
+
+The FOC of equation \ref{eq:7} with respect to $p_j^{T1}$ is:
 \begin{align}
-    p^* = \arg \max_{p_j'} (p_j' - c_j) D_j(p_j', p_{-j}) 
+    \frac{\partial \pi_j^{T1}(p^{T1}, c_j, c_{-j})}{\partial p_j^{T1}} &= (1-\lambda) \frac{\partial \pi_j^O(p^{T1}, c_j)}{\partial p_j^{T1}} + \lambda \frac{\partial \pi_j^{T2}(p^{T1}, c_j, c_{-j})}{\partial p_j^{T1}} = 0   
 \end{align}
 
-Then the expected profits of firm $j$ in the case that the consumer requests an external offer are: 
-\begin{align}\label{eq:profits_external}
-    \pi_j^{T2}(p_j, p_{-j}, c_j) =  \frac{1}{J} \left( (p_{j,2}(c_j, p) - c_j) D_j(p_{j,2}(c_j, p), p_{-j}) + \sum_{j'\neq j} (p_j - c_j) D_j(p_j, p_{j',2}(c_{j'}, p), p_{-j, -j'}) \right)
+
+Define $g(p_j, p_{-j}) =  D_j + (p_j - c_j) \frac{\partial D_j}{\partial p_j}$, then we have $     \frac{\partial \pi_j^{O}}{\partial p_j} =  g(p_j, p_{-j}) $. 
+
+Moreover,
+
+\begin{align}\label{eq:asking_j} %eq 4
+    \frac{\partial \pi_j^{(j)}(p^{T1}, c_j) }{\partial p_j^{T1} } 
+    %&=       \frac{\partial p_j^{T2}(c_j, p^{T1})}{\partial  p_j^{T1} }D_j(p_j^{T2}(c_j, p^{T1}), p_{-j}^{T1}) + (p_j^{T2}(c_j, p^{T1}) - c_j) \left[  \frac{\partial D_j(p_j^{T2}(c_j, p^{T1}), p_{-j}^{T1}) }{\partial p_j^{T2} }      \frac{\partial p_j^{T2}}{\partial p_j^{T1} }\right] \notag \\
+    %& = \frac{\partial p_j^{T2}}{\partial p_j^{T1} } \left(D_j(p_j^{T2}(c_j, p^{T1}), p_{-j}^{T1}) + (p_j^{T2}(c_j, p^{T1}) - c_j)  \frac{\partial D_j(p_j^{T2}(c_j, p^{T1}), p_{-j}^{T1}) }{\partial p_j^{T2} } \right) \notag \\ 
+    & = \frac{\partial p_j^{T2}}{\partial p_j^{T1} } g(p_j^{T2}(c_j, p^{T1}), p_{-j}^{T1}) =
+    \begin{cases}
+    g\!\left(p_j^{T1},\,p_{-j}^{T1}\right), & \text{if } p_j^{T1} < p^*(c_j, p_{-j}^{T1}),\\
+    0, & \text{if } p_j^{T1} \ge p^*(c_j, p_{-j}^{T1}).
+    \end{cases} 
 \end{align}
+And we also have 
 
-where $p_{-j, -j'}$ is the vector of offers excluding firms $j$ and $j'$. And $T2$ denotes that are the second stage profits of the two stage game. 
 
-Define the profits of firm $j$ when the buyer asks them for the external offers: 
+
 \begin{align}
-    \pi_j^{(j)}(p_j, p_{-j}, c_j) =  (p_{j,2}(c_j, p) - c_j) D_j(p_{j,2}(c_j, p), p_{-j})
+    \frac{\partial \pi_j^{(j')}(p^{T1}, c_j, c_{j'})}{\partial p_j^{T1}} =
+    D_j(p_{-j'}^{T1}, p_{ j'}^{T2}) + (p_j^{T1} - c_j)
+    \left[     \frac{\partial D_j(p_{-j'}^{T1}, p_{ j'}^{T2}) }{\partial p_j^{T1}} +
+    \frac{\partial D_j(p_{-j'}^{T1}, p_{ j'}^{T2}) }{\partial p_{ j'}^{T2} } 
+    \frac{\partial p_{ j'}^{T2}}{\partial p_j^{T1}} \right]
 \end{align}
-and when the buyer asks another firm $j'$ for the external offer:
+
+Putting everything together we have: 
+
+
+
+
+ 
 \begin{align}
-    \pi_j^{(j')}(p_j, p_{-j}, c_j) =  (p_j - c_j) D_j(p_j, p_{j',2}(c_{j'}, p), p_{-j, -j'})
+    \frac{\partial \pi_j^{T1}(p^{T1}, c_j, c_{-j})}{\partial p_j^{T1}}
+    &= (1-\lambda)\,g\bigl(p_j^{T1},p_{-j}^{T1}\bigr)
+    + \frac{\lambda}{J}\Biggl[
+      \underbrace{\frac{\partial p_j^{T2}}{\partial p_j^{T1}}\;g\bigl(p_j^{T2},p_{-j}^{T1}\bigr)}_{\text{Option value}}
+      \notag \\[4pt]
+    &\qquad\qquad + \sum_{j'\neq j}\Bigl\{
+       D_j\bigl(p_{-j'}^{T1},p_{j'}^{T2}\bigr)
+       + (p_j^{T1}-c_j)\Bigl(
+          \frac{\partial D_j\bigl(p_{-j'}^{T1},p_{ j'}^{T2}\bigr)}{\partial p_j^{T1}}
+          \notag \\[4pt]
+    &\qquad\qquad\qquad\qquad\qquad\qquad\qquad
+          + \underbrace{\frac{\partial D_j\bigl(p_{-j'}^{T1},p_{ j'}^{T2}\bigr)}{\partial p_{ j'}^{T2}}
+            \frac{\partial p_{ j'}^{T2}}{\partial p_j^{T1}}}_{\text{Strategic complementarity}}
+       \Bigr)
+    \Bigr\}
+    \Biggr] \;=\; 0
 \end{align}
-Then we have: 
-\begin{align}\label{eq:profits_external2}
-    \pi_j^{T2}(p_j, p_{-j}, c_j) =  \frac{1}{J} \left( \pi_j^{(j)}(p_j, p_{-j}, c_j)  + \sum_{j'\neq j} \pi_j^{(j')}(p_j, p_{-j}, c_j) \right)
+ 
+
+Finally, given that the costs of the rivals are not known, the equilibrium prices set in the first stage have to solve: 
+
+
+\textbf{Equilibrium definition}
+
+An equilibrium of the two stage game are pricing functions $(p^{T1}, p^{T2})_{j=1}^J$ such that 
+
+
+\begin{align}\label{eq:eq_second_stage} %eq 8
+    p_j^{T2}(c_j, p^{T1}) = \arg \max_{p_j \leq p_j^{T1}} (p_j - c_j) D_j(p_j, p_{-j}^{T1}) 
+\end{align}
+and 
+\begin{align}\label{eq:eq_first_stage} %eq 9 
+    p_j^{T1}(c_j) = \arg \max_{p_j} \int_{\mathbb{R}^{N-1}}^{}  \pi_j^{T1}(p_j, p_{-j}^{T1}(c_{-j}), c_j) dF(c_{-j} \mid c_j)   
+\end{align}
+where note that $\pi_j^{T1}$ is also a function of $p_j^{T2}$. 
+
+
+\newpage 
+ 
+\section{Simulation}
+The parameters to do this are: 
+\begin{itemize}
+    \item Demand parameters $(\delta_j)_{j=1}^J, \alpha$
+    \item Cost distributions $(F_j)_{j=1}^J$
+    \item Probability of requesting external offer $\lambda$
+\end{itemize}
+
+The solution are firm-specific pricing functions. 
+
+\medskip
+
+We simulate a scenario with $J$ firms, with mean utility $\delta_j$ which is the same for all of them. Costs are drawn from a normal distribution $(\mu_c, \sigma_c)$. %We look for symmetric equilibria. 
+Moreover we assume logit demand. 
+\subsection{Base model}
+Note that the equilibrium consists on $J$ functions, essentially we have to find $(p_j(c_j))_{j=1}^J$. We start with the symmetric case (mean utilities are the same and costs drawn from the same distribution) and for the symmetric equilibrium, meaning that we only need to find a single pricing function. 
+
+Given that we are looking for a symmetric equilibria our algorithm assumes that $J-1$ firms are playing a strategy  and we aim to minimize the distance: 
+
+
+\begin{align} % eq 10 
+    d(c) = \hat{p}(c) -\underbrace{\arg \max_{p_j} \int_{\mathbb{R}^{N-1}}^{} (p_j - c_j) D_j(p_j, \hat{p}_{-j}(c_{-j}; \theta_0)) dF(c_{-j} \mid c_j)}_{p_j(c)}
+\end{align} 
+where the first term represent the current guess of the optimal strategy and the  second term represents optimal pricing 
+
+
+We consider $C$ points in a grid in the range $[\underline{c}, \bar{c}] $
+
+\begin{enumerate}
+    \item Make an initial guess $\hat{p}^0(c)$. 
+    \item For each cost in the grid we calculate the optimal response by solving: 
+    \begin{align} %eq 11
+        p(c) = \arg \max_{p_j} \int_{\mathbb{R}^{N-1}}^{} (p_j - c_j) D_j(p_j, \hat{p}^0_{-j}(c_{-j})) dF(c_{-j})
+    \end{align}  
+    where the integral is calculated over the grid of costs.
+    The FOC is:  
+    \begin{align} % eq 12   
+        \int D_j(\cdot) -\alpha  (p_j - c_j)  D_j(\cdot) [1-D_j(\cdot)] dF(c_{-j}) = 0 
+    \end{align} 
+    where $D_j(\cdot) = D_j(p_j, \hat{p}^0_{-j}(c_{-j}))$
+    
+
+    
+    \item We calculate a distance 
+    \begin{align} % eq 13
+        \int | d(c_j) | dF(c_j)
+    \end{align}
+    if the distance is lower than a tolerance level we stop. If it is higher we update each price according to 
+
+    $\hat{p}^1(c) = \hat{p}^0(c) - \beta d(c)$
+    
+\end{enumerate}
+
+\subsection{Two stage game: symmetric case}
+
+THIS SECTION IS INCOMPLETE. 
+Now the equilibrium consists on $2J$ functions, essentially we have to find $(p_j^{T1}(c_j), p_j^{T2}(c_j, p^{T1}))_{j=1}^J$. We start with the symmetric case (mean utilities are the same and costs drawn from the same distribution) and for the symmetric equilibrium, meaning that we only need to find two pricing functions.
+
+
+We approximate $F$ on a grid $\{c_i\}_{i=1}^C$ with weights $\{w_i\}_{i=1}^C$, $\sum_i w_i=1$, and use common random numbers to draw $\{c_{-j}^{(r)}\}_{r=1}^R$ for rivals at each grid node.
+
+From equation \ref{eq:eq_second_stage}, and assuming logit demand, the second stage price solves: 
+
+\begin{align}\label{eq:14} % eq 14
+    %D_j(p_j^{T2}(c_j, p^{T1}), p_{-j}^{T1}) + (p_j^{T2}(c_j, p^{T1}) - c_j) \frac{\partial D_j(p_j^{T2}(c_j, p^{T1}), p_{-j}^{T1})}{\partial p_j} = 0 \notag \\
+    %D_j(p_j^{T2}(c_j, p^{T1}), p_{-j}^{T1}) + (p_j^{T2}(c_j, p^{T1}) - c_j) \left[-\alpha\, D_j(p_j^{T2}(c_j, p^{T1}), p_{-j}^{T1})\,\bigl(1 -D_j(p_j^{T2}(c_j, p^{T1}), p_{-j}^{T1})\bigr)\right] = 0 \notag \\
+    %1 = (p_j^{T2}(c_j, p^{T1}) - c_j) \alpha \bigl(1 -D_j(p_j^{T2}(c_j, p^{T1}), p_{-j}^{T1})\bigr) = 0 \notag \\
+    p_j^{T2}(c_j, p^{T1}) = \min \{c_j+\frac{1}{\alpha   (1 -D_j(p_j^{T2}(c_j, p^{T1}), p_{-j}^{T1}))}, p_j^{T1}  \}
 \end{align}
 
+Using \ref{eq:14} to replace in equation \ref{eq:asking_j} and \ref{eq:asking_j'} we can obtain the second stage equilibrium profits in case the firm asks for an external offer from any firm $\pi_j^{(j)}(p^{T1}, c_j)$ and $\pi_j^{(j')}(p^{T1}, c_j, c_{j'})$, then using equation \ref{eq:profits_external2} we can obtain $\pi_j^{T2}(p^{T1}, c_j, c_{-j})$. 
 
-Then the expected profits of firm $j$ in the first stage are: 
-\begin{align}
-    \pi_j^{T1}(p_j, p_{-j}, c_j) = (1-\lambda) \pi_j^O(p_j, p_{-j}, c_j) + \lambda \pi_j^{T2}(p_j, p_{-j}, c_j)
-\end{align}
+\paragraph{Goal.} In the symmetric equilibrium, we solve for a single first stage and another single second stage pricing function where jointly they have to satisfy equations \ref{eq:eq_second_stage} and \ref{eq:eq_first_stage}. 
 
-An equilibrium of game with external offers are pricing functions  $p_j^T(c_i)$ such that for all $j$:
-\begin{align}\label{eq:base_equilibrium3}
-    p_j^T(c_i) = \arg \max_{p_j} \int_{\mathbb{R}^{N-1}}^{}  \pi_j^{T1}(p_j, p_{-j}, c_j) dF(p_{-j} \mid c_j)   
-\end{align}
+\paragraph{Inputs.} Number of firms $J$, demand parameters $(\delta,\alpha)$, cost distribution $F$,
+request probability $\lambda\in[0,1]$, grid size $C$, Monte Carlo draws $R$, damping $\beta\in(0,1]$,
+tolerance $\varepsilon>0$, and a search bracket $[\underline p(c), \overline p(c)]$ with
+$\underline p(c)=c$ and $\overline p(c)=c+\bar m$ for some $\bar m>0$.
+
+\paragraph{Discretization.} Approximate $F$ on a grid $\{c_i\}_{i=1}^C$ with weights
+$\{w_i\}_{i=1}^C$ ($\sum_i w_i=1$). For each node $c_i$, pre-draw $R$ i.i.d.\ rival cost vectors
+$\{c^{(r)}_{-j}\}_{r=1}^R \sim F^{J-1}$ and \emph{keep these draws fixed across iterations}
+(common random numbers).
+
+\vspace{3cm}
+
+\paragraph{Algorithm (backward induction inside an outer fixed point).}
+\begin{enumerate}
+  \item \textbf{Initialization.} Set an initial first-stage function $p^{T1}_0(c)$.
+  A stable choice is a one-stage cost-plus guess,
+  \[
+    p^{T1}_0(c) \;=\; c \;+\; \frac{1}{\alpha\,(1-\bar s)},\qquad \bar s \approx \frac{1}{J}
+  \]
+  
+  \item \textbf{Inner Stage-2 operator $\mathcal{T}_2$ (given $p^{T1}_k$).}
+  For each grid node $c = (c_1, ..., c_J)$:
+  \begin{enumerate}
+    \item Compute the stage-2 best reply $p^\star(c_j; p^{T1}_{-j})$ by solving
+    the one-dimensional fixed point from (14):
+    \[
+      p \;=\; c_j \;+\; \frac{1}{\alpha\bigl(1 - D_j(p,\,p^{T1}_{-j})\bigr)}.
+    \]
+    \item Apply the no-increase cap from (2):
+    \[
+      p^{T2}_k (c_j; p^{T1}_{-j})
+      \;=\; \min\!\left\{\,p^{T1}_k(c_j),\; p^\star(c_j; p^{T1}_{-j}) \right\}.
+    \]
+  \end{enumerate}
+
+  \item \textbf{Stage-2 profits (conditional on a request).}
+
+  Using \ref{eq:asking_j}, \ref{eq:asking_j'} and \ref{eq:profits_external2}, form for each $(c_j, c^{(r)}_{-j})$:
+  First map $c^{(r)}_{-j}$ into $p^{T1}_{-j}(c^{(r)}_{-j})$ using $p^{T1}_k$,
+  then compute
+  \[
+  \begin{aligned}
+   &\pi^{(j)}_j(p^{T1}_k, c_j) =
+   \bigl( p^{T2}_k (c_j; p^{T1}_{-j}) 
+    -c_j\bigr)    D_j\!\Bigl(    p^{T2}_k (c_j; p^{T1}_{-j})  ,\,p^{T1}_{-j}\Bigr) ,\\[2pt]
+   &\pi^{(j')}_j\bigl(p^{T1}_k, c_j, c^{(r)}_{-j}\bigr)
+   \;=\; \frac{1}{J-1}\sum_{m\neq j}
+   \Bigl(p^{T1}_k(c_j)-c_j\Bigr)\,
+   D_j\!\Bigl(p^{T1}_k(c_j),\,
+   p^{T1}_{-j}(\,c^{(r)}_{-j}\,)\big|_{m \leftarrow p^{T2}_k(c^{(r)}_{m};\,c^{(r)}_{-m})}\Bigr),\\[2pt]
+   &\pi^{T2}_j\bigl(p^{T1}_k, c_i, c^{(r)}_{-j}\bigr)
+   \;=\; \frac{1}{J}\,\pi^{(j)}_j\bigl(p^{T1}_k, c_i\bigr)
+   \;+\; \frac{J-1}{J}\,\pi^{(j')}_j\bigl(p^{T1}_k, c_i, c^{(r)}_{-j}\bigr).
+  \end{aligned}
+  \]
+
+  \item \textbf{Stage-1 objective at $(p;c_i)$ (Monte Carlo version of (7)).}
+  For any trial price $p$ at cost $c_i$,
+  \[
+  \widehat{\pi}^{O}_j(p;c_i)
+  \;=\;
+  \frac{1}{R}\sum_{r=1}^R (p-c_i)\,
+  D_j\!\Bigl(p,\,p^{T1}_{-j}(\,c^{(r)}_{-j}\,)\Bigr),
+  \]
+
+  \[
+  \widehat{\pi}^{T2}_j(p;c_i)
+  \;=\;
+  \frac{1}{R}\sum_{r=1}^R \pi^{T2}_j\bigl(p^{T1}_k, c_i, c^{(r)}_{-j}\bigr)
+  \quad\text{(with $p^{T2}$ from Step 2),}
+  \]
+  \[
+  \widehat{\Pi}^{(1)}(p;c_i)
+  \;=\;
+  (1-\lambda)\,\widehat{\pi}^{O}_j(p;c_i)
+  \;+\; \lambda\,\widehat{\pi}^{T2}_j(p;c_i).
+  \]
+
+  \item \textbf{Pointwise best response (implements (9)).}
+  For each $c_i$, compute
+  \[
+    p^{\mathrm{BR}}_k(c_i)
+    \;\in\; \arg\max_{\,p \in [\,c_i,\,c_i+\bar m\,]}\;\widehat{\Pi}^{(1)}(p;c_i).
+  \]
+  (A simple and robust choice is a bracketed 1D search.)
+
+  \item \textbf{Distance update (mirrors (10)–(13)).}
+  Define the distance $d_k(c_i)=p^{T1}_k(c_i)-p^{\mathrm{BR}}_k(c_i)$ and update
+  \[
+    p^{T1}_{k+1}(c_i) \;=\; p^{T1}_{k}(c_i) \;-\; \beta\, d_k(c_i).
+  \]
+  Optionally enforce monotonicity in costs (isotonic regression on $\{(c_i,p^{T1}_{k+1}(c_i))\}$).
+
+  \item \textbf{Stopping rule.}
+  Stop when the weighted $L^1$ distance falls below tolerance,
+  \[
+    \mathcal{D}_k \;=\; \sum_{i=1}^C w_i\,\bigl|\,p^{T1}_{k+1}(c_i)-p^{T1}_{k}(c_i)\,\bigr|
+    \;<\; \varepsilon,
+  \]
+  or equivalently when $\sum_i w_i |d_k(c_i)|<\varepsilon$.
+\end{enumerate}
+
+\paragraph{Output.} The fixed point $p^{T1}_\star(\cdot)$ and the induced
+$p^{T2}_\star(\cdot;\cdot)=\mathcal{T}_2[p^{T1}_\star]$ constitute the symmetric two-stage equilibrium
+satisfying (8)–(9) with stage-2 prices computed via (14) and capped by (2).
+
+\paragraph{Implementation tips.}
+(i) Keep the rival cost draws fixed across iterations (variance reduction).
+(ii) Use damping $\beta$ and a reasonable $\bar m$ to stabilize the outer loop.
+(iii) The 1D fixed point in (14) is a contraction under logit; a damped update $p\leftarrow
+c + 1/(\alpha(1-D_j(p,\cdot)))$ converges rapidly, then apply the cap $p^{T2}\le p^{T1}$.
 
 
 
-\subsection{Comparison of the two models }
+
+\section{Comparison of the two models }
+
+THIS SECTION IS INCOMPLETE
 
 Define $g(p_j, p_{-j}) =  D_j + (p_j - c_j) \frac{\partial D_j}{\partial p_j}$ 
 Then the FOC of condition \ref{eq:base_equilibrium} is:
@@ -162,10 +430,6 @@ My intuition is that the competitive threat effect reduces prices, because if ev
 
 \textcolor{red}{I THINK THAT FOR THE CASE with no differentiation we can use \textcite{spulber_bertrand_1995} to show that the prices with the external offer are lower. }
 
-
-
-
-
 \vspace{3cm}
 
 
@@ -185,65 +449,5 @@ Note that the option value term is always positive, particulary evaluated in $p_
 
 
 
-
-\section{Simulation}
-The parameters to do this are: 
-\begin{itemize}
-    \item Demand parameters $(\delta_j)_{j=1}^J, \alpha$
-    \item Cost distributions $(F_j)_{j=1}^J$
-    \item Probability of requesting external offer $\lambda$
-\end{itemize}
-
-The solution are firm-specific pricing functions. 
-
-\medskip
-
-We simulate a scenario with $J$ firms, with mean utility $\delta_j$ which is the same for all of them. Costs are drawn from a normal distribution $(\mu_c, \sigma_c)$. %We look for symmetric equilibria. 
-Moreover we assume logit demand. 
-\subsection{Base model}
-Note that the equilibrium consists on $J$ functions, essentially we have to find $(p_j(c_j))_{j=1}^J$. We start with the symmetric case (mean utilities are the same and costs drawn from the same distribution) and search for a parametric pricing function $p(c; \theta)$ which we initially assume has a linear parametrization: $p(c; \theta)= \theta_0 + \theta_1 c$. We also assume that the cost draws are independent. 
-
-
-
-\vspace{2cm}
-
-Given that we are looking for a symmetric equilibria our algorithm assumes that $J-1$ firms are playing a strategy parametrized by $\theta$ and then 
-the we aim to minimize the distance: 
-\begin{align}
-    d(\theta, c_j) = p_j(c_j; \theta) -\underbrace{\arg \max_{p_j} \int_{\mathbb{R}^{N-1}}^{} (p_j - c_j) D_j(p_j, p_{-j}(c_{-j}; \theta_0)) dF(c_{-j} \mid c_j)}_{p_j(c_j)}
-\end{align} 
-where the first term represent the strategy implied by our guess and the second term represents optimal pricing 
-
-
-We consider $C$ points in a grid in the range $[\underline{c}, \bar{c}] $
-
-\begin{enumerate}
-    \item Make an initial guess $\theta_0$. 
-    \item For each cost in the grid we calculate the optimal response by solving: 
-    \begin{align}
-        p_j(c_j) = \arg \max_{p_j} \int_{\mathbb{R}^{N-1}}^{} (p_j - c_j) D_j(p_j, p_{-j}(c_{-j}; \theta_0)) dF(c_{-j})
-    \end{align}  
-    where the integral is calculated over the grid of costs. 
-    \item We calculate a distance 
-    \begin{align}
-        \int d(\theta, c_j) dF(c_j)
-    \end{align}
-    
-\end{enumerate}
-Strategy to solve for the model. 
-
  
-\begin{align}
-\label{eq:base_equilibrium}
-    p_j(c_j) = \arg \max_{p_j} \int_{\mathbb{R}^{N-1}}^{} (p_j - c_j) D_j(p_j, p_{-j}(c_{-j})) dF(c_{-j} \mid c_j)
-\end{align} 
-
-
-
-
-
-
-
-
-
 \end{document}
